// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. mobile primary image with caption and credits 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 0px;
  }
}

Array [
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <TimesImage
          accessibilityLabel="Some caption"
          aspectRatio={1.25}
          caption={
            <Caption
              credits="Some credits"
              text="Some caption"
            />
          }
          disablePlaceholder={false}
          fadeImageIn={false}
          highResSize={null}
          isLcpItem={false}
          lowResSize={null}
          onImagePress={null}
          rounded={false}
          uri="https://img/someImage"
        />
      </div>
    </StyledComponent>
  </tc-view__TcView>,
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <responsive__InsetCaptionStyle>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "responsive__InsetCaptionStyle-sc-1io40fc-2",
                  "isStatic": true,
                  "lastClassName": "c2",
                  "rules": Array [
                    "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                    "padding-left:",
                    "10px",
                    ";@media (min-width:",
                    "768",
                    "px){padding-left:0px;}",
                  ],
                },
                "displayName": "responsive__InsetCaptionStyle",
                "foldedComponentIds": Array [
                  "tc-view__TcView-nuazoi-0",
                ],
                "render": [Function],
                "styledComponentId": "responsive__InsetCaptionStyle-sc-1io40fc-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c2"
            >
              <tc-view__TcView>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "tc-view__TcView-nuazoi-0",
                        "isStatic": true,
                        "lastClassName": "c0",
                        "rules": Array [
                          "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                        ],
                      },
                      "displayName": "tc-view__TcView",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "tc-view__TcView-nuazoi-0",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c0"
                  >
                    <tc-view__TcView>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "tc-view__TcView-nuazoi-0",
                              "isStatic": true,
                              "lastClassName": "c0",
                              "rules": Array [
                                "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                              ],
                            },
                            "displayName": "tc-view__TcView",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "tc-view__TcView-nuazoi-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c0"
                        >
                          <tc-text__TcText>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "tc-text__TcText-sc-15igzev-0",
                                    "isStatic": true,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                                    ],
                                  },
                                  "displayName": "tc-text__TcText",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "tc-text__TcText-sc-15igzev-0",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                              >
                                Some caption
                              </div>
                            </StyledComponent>
                          </tc-text__TcText>
                          <tc-text__TcText
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "SOME CREDITS",
                              }
                            }
                          >
                            <StyledComponent
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "SOME CREDITS",
                                }
                              }
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "tc-text__TcText-sc-15igzev-0",
                                    "isStatic": true,
                                    "lastClassName": "c3",
                                    "rules": Array [
                                      "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                                    ],
                                  },
                                  "displayName": "tc-text__TcText",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "tc-text__TcText-sc-15igzev-0",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c3"
                                dangerouslySetInnerHTML={
                                  Object {
                                    "__html": "SOME CREDITS",
                                  }
                                }
                              />
                            </StyledComponent>
                          </tc-text__TcText>
                        </div>
                      </StyledComponent>
                    </tc-view__TcView>
                  </div>
                </StyledComponent>
              </tc-view__TcView>
            </div>
          </StyledComponent>
        </responsive__InsetCaptionStyle>
      </div>
    </StyledComponent>
  </tc-view__TcView>,
]
`;

exports[`2. secondary image with caption and credits 1`] = `
.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

Array [
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <TimesImage
          accessibilityLabel="Another caption"
          aspectRatio={1.5}
          caption={
            <Caption
              credits="Other credits"
              text="Another caption"
            />
          }
          disablePlaceholder={false}
          fadeImageIn={false}
          highResSize={null}
          isLcpItem={false}
          lowResSize={null}
          onImagePress={null}
          rounded={false}
          uri="https://img/someImage"
        />
      </div>
    </StyledComponent>
  </tc-view__TcView>,
  <tc-view__TcView>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "tc-view__TcView-nuazoi-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
            ],
          },
          "displayName": "tc-view__TcView",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "tc-view__TcView-nuazoi-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0"
      >
        <tc-view__TcView>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "tc-view__TcView-nuazoi-0",
                  "isStatic": true,
                  "lastClassName": "c0",
                  "rules": Array [
                    "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                  ],
                },
                "displayName": "tc-view__TcView",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "tc-view__TcView-nuazoi-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="c0"
            >
              <tc-view__TcView>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "tc-view__TcView-nuazoi-0",
                        "isStatic": true,
                        "lastClassName": "c0",
                        "rules": Array [
                          "border:0px solid black;box-sizing:border-box;display:flex;flex-direction:column;margin:0px;min-height:0px;min-width:0px;padding:0px;position:relative;z-index:0;",
                        ],
                      },
                      "displayName": "tc-view__TcView",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "tc-view__TcView-nuazoi-0",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="c0"
                  >
                    <tc-text__TcText>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "tc-text__TcText-sc-15igzev-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                              ],
                            },
                            "displayName": "tc-text__TcText",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "tc-text__TcText-sc-15igzev-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                        >
                          Another caption
                        </div>
                      </StyledComponent>
                    </tc-text__TcText>
                    <tc-text__TcText
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "OTHER CREDITS",
                        }
                      }
                    >
                      <StyledComponent
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "OTHER CREDITS",
                          }
                        }
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "tc-text__TcText-sc-15igzev-0",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "border:0px solid black;box-sizing:border-box;color:rgb(0,0,0);display:inline;font-size:14px;font-family:sans-serif;margin:0px;padding:0px;white-space:pre-wrap;overflow-wrap:break-word;",
                              ],
                            },
                            "displayName": "tc-text__TcText",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "tc-text__TcText-sc-15igzev-0",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <div
                          className="c2"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "OTHER CREDITS",
                            }
                          }
                        />
                      </StyledComponent>
                    </tc-text__TcText>
                  </div>
                </StyledComponent>
              </tc-view__TcView>
            </div>
          </StyledComponent>
        </tc-view__TcView>
      </div>
    </StyledComponent>
  </tc-view__TcView>,
]
`;
